integrate values in the app file for values sync

--- a/devops engineering/argocd/argocd-self-manage/apps-children/argocd-app.yaml
+++ b/devops engineering/argocd/argocd-self-manage/apps-children/argocd-app.yaml
@@ -14,8 +14,25 @@ spec:
     chart: argo-cd
     helm:
       releaseName: argo-cd
-      valueFiles:
-        - values.yaml
+      values: |
+        redis-ha:
+          enabled: true
+
+        controller:
+          replicas: 1
+
+        server:
+          autoscaling:
+            enabled: true
+            minReplicas: 1
+
+        repoServer:
+          autoscaling:
+            enabled: true
+            minReplicas: 1
+
+        applicationSet:
+          replicas: 1
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
