readded the values.yaml for initial manual step; added README.md

--- a/devops engineering/argocd/argocd-self-manage/apps-children/argocd-app.yaml
+++ b/devops engineering/argocd/argocd-self-manage/apps-children/argocd-app.yaml
@@ -15,8 +15,8 @@ spec:
     helm:
       releaseName: argo-cd
       values: |
-        redis-ha:
-          enabled: true
+        #redis-ha:
+        #  enabled: true
 
         controller:
           replicas: 1
